force-app/main/default/objects/PurgeRecordScheduler__mdt/PurgeRecordScheduler__mdt.object-meta.xml
<CustomObject>
    <label>Purge Record Scheduler</label>
    <pluralLabel>Purge Records Scheduler</pluralLabel>
</CustomObject>