force-app/main/default/objects/PurgeRecordScheduler__mdt/fields/PartialDelete__c.field-meta.xml
<CustomField>
    <fullName>PartialDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Delete</label>
    <type>Checkbox</type>
</CustomField>