force-app/main/default/objects/PurgeRecordScheduler__mdt/fields/QueryFilter__c.field-meta.xml
<CustomField>
    <fullName>QueryFilter__c</fullName>
    <inlineHelpText>This is very important and required, that filter which records should be deleted</inlineHelpText>
    <label>Query Filter</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>