force-app/main/default/objects/PurgeRecordScheduler__mdt/fields/RunAtSystemLevel__c.field-meta.xml
<CustomField>
    <fullName>RunAtSystemLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run At System Level</label>
    <type>Checkbox</type>
</CustomField>