force-app/main/default/objects/PurgeRecordScheduler__mdt/fields/SendNotification__c.field-meta.xml
<CustomField>
    <fullName>SendNotification__c</fullName>
    <label>Send Notification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>If Errors</fullName>
            </value>
            <value>
                <fullName>If Success</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>