force-app/main/default/objects/PurgeRecordScheduler__mdt/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <label>sObject Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>